# Snake_classic

./: CMakeLists.txt  README.de.md  README.md  Snake.sln
Snake/: Food.cpp  Food.hpp  Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  Main.cpp  Snake.cpp  Snake.hpp  Snake.vcxproj  Snake.vcxproj.filters  SnakePart.cpp  SnakePart.hpp
